@@ -3,6 +3,7 @@ releases are sorted from youngest to oldest.
 
 version <next>:
 - DXV decoding
+- extrastereo filter
 
 
 version 2.8:
